--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ bld/
 .vs/
 
 # Visual Studio Code
-.vscode/
+#.vscode/
 
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
@@ -332,12 +332,6 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
-
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/extensions.json
-*.code-workspace
 
 # Local configuration
 config.json
