--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,25 +4,21 @@
 	"name": "dotnet",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/dotnet:1-10.0-noble",
-
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
-		"ghcr.io/devcontainers/features/dotnet": {
+		"ghcr.io/devcontainers/features/dotnet:2": {
 			"version": "10.0"
 		}
 	},
-
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [5000, 5001],
 	// "portsAttributes": {
 	//		"5001": {
 	//			"protocol": "https"
 	//		}
-	// }
-
+	// },
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "dotnet restore",
-
 	// Configure tool-specific properties.
 	"customizations": {
 		"codespaces": {
@@ -33,11 +29,11 @@
 		"vscode": {
 			"extensions": [
 				"GitHub.copilot-chat",
-				"ms-dotnettools.csdevkit"
+				"ms-dotnettools.csdevkit",
+				"EditorConfig.EditorConfig"
 			]
 		}
 	}
-
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
 }
